--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "expo-linking": "~6.2.2",
     "expo-router": "~3.4.6",
     "expo-status-bar": "~1.11.1",
+    "firebase": "^10.7.2",
     "react": "18.2.0",
     "react-native": "0.73.2",
     "react-native-gesture-handler": "~2.14.0",
